# cctv-memory

./: .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  config.yaml  pyproject.toml
cctv_memory/: __init__.py  bootstrap.py
cctv_memory/api/: __init__.py  app.py  errors.py
cctv_memory/application/: __init__.py  admin_diagnostics.py  analysis_orchestrator.py  async_support.py  auth.py  backup.py  benchmark.py  doctor.py  experiment_fixtures.py  health.py  ingestion.py  locator.py  maintenance.py  playback.py  publication.py  request_services.py  search.py  seed.py
cctv_memory/cli/: __init__.py
cctv_memory/config/: __init__.py  settings.py
cctv_memory/contracts/: __init__.py  analysis.py  audit.py  auth.py  backup.py  common.py  experiment.py  index.py  object_detection.py  observation.py  pipeline.py  pre_vlm_gate.py  search.py  task.py  timeline.py  video.py  vlm.py
cctv_memory/domain/: __init__.py  enums.py  exceptions.py  metrics.py  policies.py  ranking.py  state_machine.py
cctv_memory/infrastructure/: __init__.py  runtime.py
cctv_memory/ops/: __init__.py  capacity_estimation.py  postgres_migration.py  timeline_export.py
cctv_memory/repositories/: __init__.py  analysis.py  audit.py  backup.py  camera.py  index.py  observation.py  principal.py  search_context.py  task_queue.py  timeline.py  types.py  video_source.py
cctv_memory/services/: __init__.py  auth_verifier.py  detector_gate.py  embedding.py  frame_stream.py  (+9 more)
docs/: ARCHITECTURE_CONSTITUTION.md  CONTEXT_MANIFEST.md  DEVELOPMENT.md  INDEX.md  SERVER_CLIENT_BOUNDARY.md  USAGE.md  client-retrieval-experiment-guide.md  object-detection-schema-design.md
scripts/: capacity_report.py  fetch_surveillance_samples.sh
tests/: conftest.py
(+175 files in other folders)
